Initial UI Design

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.7.2"
-arduino = "1.4.5"
+arduino = "1.4.6"
 kotlin = "1.9.24"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -10,6 +10,7 @@ appcompat = "1.3.1"
 material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.2.0"
+usbserial = "6.0.6"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -21,6 +22,7 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+usbserial = { module = "com.github.felHR85:UsbSerial", version.ref = "usbserial" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
